--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,5 +1,11 @@
 header {
   text-align: center;
+  /* margin-top: 1.25em;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%); */
 }
 .logo {
   width: 10.5em;
