--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.html {
+html {
   height: 100%;
   box-sizing: border-box;
-  font-size: 0.833em;
-  overflow-x: hidden;
+  font-size: 0.833vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* overflow-x: hidden; */
+}
+img {
+  max-width: 100%;
+}
+@media (orientation: portrait) {
+  body {
+    background-image: url(./images/bg_mob.jpg);
+    background-size: 100% auto;
+    overflow-x: hidden;
+  }
+  html {
+    font-size: 2.2vw;
+    overflow-x: hidden;
+  }
 }
